// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render styles for size lg 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #474747;
  font-size: 28px;
  font-weight: 500;
  line-height: calc(34 / 28);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:36.0625em) {
  .c0 {
    font-size: 37px;
    line-height: calc(40/37);
  }
}

<HeadingTag
  className="c0"
  size="lg"
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#ffd1da",
          "200": "#ffa4b6",
          "25": "#fff3f5",
          "300": "#ff7692",
          "400": "#ff496e",
          "50": "#ffe8ec",
          "500": "#ff1c4a",
          "600": "#cc163b",
          "700": "#99102c",
          "800": "#660b1d",
          "900": "#33050e",
          "950": "#190207",
        },
        "info": Object {
          "100": "#dae7f7",
          "200": "#b5d0ef",
          "25": "#f5f9fd",
          "300": "#91b9e8",
          "400": "#6ca2e0",
          "50": "#ecf3fb",
          "500": "#488bd9",
          "600": "#396fad",
          "700": "#2b5382",
          "800": "#1c3756",
          "900": "#0e1b2b",
          "950": "#070d15",
        },
        "primary": Object {
          "100": "#ccf2ed",
          "200": "#99e5db",
          "25": "#f2fbfa",
          "300": "#66d9c9",
          "400": "#32ccb7",
          "50": "#e5f8f6",
          "500": "#00c0a5",
          "600": "#009984",
          "700": "#007363",
          "800": "#004c42",
          "900": "#002621",
          "950": "#001310",
        },
        "secondary": Object {
          "100": "#cedee1",
          "200": "#9ebdc4",
          "25": "#f2f6f7",
          "300": "#6d9ca7",
          "400": "#3d7a8a",
          "50": "#e6eef0",
          "500": "#0d5a6d",
          "600": "#0a4857",
          "700": "#073641",
          "800": "#05242b",
          "900": "#021215",
          "950": "#01080a",
        },
        "shade": Object {
          "0": "#ffffff",
          "100": "#e3e3e3",
          "1000": "#000000",
          "200": "#c8c8c8",
          "25": "#f8f8f8",
          "300": "#adadad",
          "400": "#929292",
          "50": "#f1f1f1",
          "500": "#777777",
          "600": "#5f5f5f",
          "700": "#474747",
          "800": "#2f2f2f",
          "900": "#171717",
          "950": "#0b0b0b",
        },
        "success": Object {
          "100": "#dbf2cc",
          "200": "#b8e599",
          "25": "#f6fbf2",
          "300": "#94d966",
          "400": "#71cc32",
          "50": "#edf8e5",
          "500": "#4ec000",
          "600": "#3e9900",
          "700": "#2e7300",
          "800": "#1f4c00",
          "900": "#0f2600",
          "950": "#071300",
        },
        "tertiary": Object {
          "100": "#ffe2df",
          "200": "#ffc5c0",
          "25": "#fff7f7",
          "300": "#ffa9a1",
          "400": "#ff8c82",
          "50": "#fff0ef",
          "500": "#ff7063",
          "600": "#cc594f",
          "700": "#99433b",
          "800": "#662c27",
          "900": "#331613",
          "950": "#190b09",
        },
        "warn": Object {
          "100": "#fdedd3",
          "200": "#fbdba7",
          "25": "#fefaf4",
          "300": "#f9c97b",
          "400": "#f7b74e",
          "50": "#fef6e9",
          "500": "#f5a623",
          "600": "#c4841c",
          "700": "#936315",
          "800": "#62420e",
          "900": "#312107",
          "950": "#181003",
        },
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;

exports[`Heading should render styles for size md 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #474747;
  font-size: 22px;
  font-weight: 500;
  line-height: calc(28 / 22);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:36.0625em) {
  .c0 {
    font-size: 28px;
    line-height: calc(32/28);
  }
}

<HeadingTag
  className="c0"
  size="md"
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#ffd1da",
          "200": "#ffa4b6",
          "25": "#fff3f5",
          "300": "#ff7692",
          "400": "#ff496e",
          "50": "#ffe8ec",
          "500": "#ff1c4a",
          "600": "#cc163b",
          "700": "#99102c",
          "800": "#660b1d",
          "900": "#33050e",
          "950": "#190207",
        },
        "info": Object {
          "100": "#dae7f7",
          "200": "#b5d0ef",
          "25": "#f5f9fd",
          "300": "#91b9e8",
          "400": "#6ca2e0",
          "50": "#ecf3fb",
          "500": "#488bd9",
          "600": "#396fad",
          "700": "#2b5382",
          "800": "#1c3756",
          "900": "#0e1b2b",
          "950": "#070d15",
        },
        "primary": Object {
          "100": "#ccf2ed",
          "200": "#99e5db",
          "25": "#f2fbfa",
          "300": "#66d9c9",
          "400": "#32ccb7",
          "50": "#e5f8f6",
          "500": "#00c0a5",
          "600": "#009984",
          "700": "#007363",
          "800": "#004c42",
          "900": "#002621",
          "950": "#001310",
        },
        "secondary": Object {
          "100": "#cedee1",
          "200": "#9ebdc4",
          "25": "#f2f6f7",
          "300": "#6d9ca7",
          "400": "#3d7a8a",
          "50": "#e6eef0",
          "500": "#0d5a6d",
          "600": "#0a4857",
          "700": "#073641",
          "800": "#05242b",
          "900": "#021215",
          "950": "#01080a",
        },
        "shade": Object {
          "0": "#ffffff",
          "100": "#e3e3e3",
          "1000": "#000000",
          "200": "#c8c8c8",
          "25": "#f8f8f8",
          "300": "#adadad",
          "400": "#929292",
          "50": "#f1f1f1",
          "500": "#777777",
          "600": "#5f5f5f",
          "700": "#474747",
          "800": "#2f2f2f",
          "900": "#171717",
          "950": "#0b0b0b",
        },
        "success": Object {
          "100": "#dbf2cc",
          "200": "#b8e599",
          "25": "#f6fbf2",
          "300": "#94d966",
          "400": "#71cc32",
          "50": "#edf8e5",
          "500": "#4ec000",
          "600": "#3e9900",
          "700": "#2e7300",
          "800": "#1f4c00",
          "900": "#0f2600",
          "950": "#071300",
        },
        "tertiary": Object {
          "100": "#ffe2df",
          "200": "#ffc5c0",
          "25": "#fff7f7",
          "300": "#ffa9a1",
          "400": "#ff8c82",
          "50": "#fff0ef",
          "500": "#ff7063",
          "600": "#cc594f",
          "700": "#99433b",
          "800": "#662c27",
          "900": "#331613",
          "950": "#190b09",
        },
        "warn": Object {
          "100": "#fdedd3",
          "200": "#fbdba7",
          "25": "#fefaf4",
          "300": "#f9c97b",
          "400": "#f7b74e",
          "50": "#fef6e9",
          "500": "#f5a623",
          "600": "#c4841c",
          "700": "#936315",
          "800": "#62420e",
          "900": "#312107",
          "950": "#181003",
        },
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;

exports[`Heading should render styles for size sm 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #474747;
  font-size: 18px;
  font-weight: 500;
  line-height: calc(24 / 18);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:36.0625em) {
  .c0 {
    font-size: 22px;
    line-height: calc(28/22);
  }
}

<HeadingTag
  className="c0"
  size="sm"
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#ffd1da",
          "200": "#ffa4b6",
          "25": "#fff3f5",
          "300": "#ff7692",
          "400": "#ff496e",
          "50": "#ffe8ec",
          "500": "#ff1c4a",
          "600": "#cc163b",
          "700": "#99102c",
          "800": "#660b1d",
          "900": "#33050e",
          "950": "#190207",
        },
        "info": Object {
          "100": "#dae7f7",
          "200": "#b5d0ef",
          "25": "#f5f9fd",
          "300": "#91b9e8",
          "400": "#6ca2e0",
          "50": "#ecf3fb",
          "500": "#488bd9",
          "600": "#396fad",
          "700": "#2b5382",
          "800": "#1c3756",
          "900": "#0e1b2b",
          "950": "#070d15",
        },
        "primary": Object {
          "100": "#ccf2ed",
          "200": "#99e5db",
          "25": "#f2fbfa",
          "300": "#66d9c9",
          "400": "#32ccb7",
          "50": "#e5f8f6",
          "500": "#00c0a5",
          "600": "#009984",
          "700": "#007363",
          "800": "#004c42",
          "900": "#002621",
          "950": "#001310",
        },
        "secondary": Object {
          "100": "#cedee1",
          "200": "#9ebdc4",
          "25": "#f2f6f7",
          "300": "#6d9ca7",
          "400": "#3d7a8a",
          "50": "#e6eef0",
          "500": "#0d5a6d",
          "600": "#0a4857",
          "700": "#073641",
          "800": "#05242b",
          "900": "#021215",
          "950": "#01080a",
        },
        "shade": Object {
          "0": "#ffffff",
          "100": "#e3e3e3",
          "1000": "#000000",
          "200": "#c8c8c8",
          "25": "#f8f8f8",
          "300": "#adadad",
          "400": "#929292",
          "50": "#f1f1f1",
          "500": "#777777",
          "600": "#5f5f5f",
          "700": "#474747",
          "800": "#2f2f2f",
          "900": "#171717",
          "950": "#0b0b0b",
        },
        "success": Object {
          "100": "#dbf2cc",
          "200": "#b8e599",
          "25": "#f6fbf2",
          "300": "#94d966",
          "400": "#71cc32",
          "50": "#edf8e5",
          "500": "#4ec000",
          "600": "#3e9900",
          "700": "#2e7300",
          "800": "#1f4c00",
          "900": "#0f2600",
          "950": "#071300",
        },
        "tertiary": Object {
          "100": "#ffe2df",
          "200": "#ffc5c0",
          "25": "#fff7f7",
          "300": "#ffa9a1",
          "400": "#ff8c82",
          "50": "#fff0ef",
          "500": "#ff7063",
          "600": "#cc594f",
          "700": "#99433b",
          "800": "#662c27",
          "900": "#331613",
          "950": "#190b09",
        },
        "warn": Object {
          "100": "#fdedd3",
          "200": "#fbdba7",
          "25": "#fefaf4",
          "300": "#f9c97b",
          "400": "#f7b74e",
          "50": "#fef6e9",
          "500": "#f5a623",
          "600": "#c4841c",
          "700": "#936315",
          "800": "#62420e",
          "900": "#312107",
          "950": "#181003",
        },
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;

exports[`Heading should render styles for size xl 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #474747;
  font-size: 37px;
  font-weight: bold;
  line-height: calc(40 / 37);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:36.0625em) {
  .c0 {
    font-size: 46px;
    line-height: calc(50/46);
  }
}

<HeadingTag
  className="c0"
  size="xl"
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#ffd1da",
          "200": "#ffa4b6",
          "25": "#fff3f5",
          "300": "#ff7692",
          "400": "#ff496e",
          "50": "#ffe8ec",
          "500": "#ff1c4a",
          "600": "#cc163b",
          "700": "#99102c",
          "800": "#660b1d",
          "900": "#33050e",
          "950": "#190207",
        },
        "info": Object {
          "100": "#dae7f7",
          "200": "#b5d0ef",
          "25": "#f5f9fd",
          "300": "#91b9e8",
          "400": "#6ca2e0",
          "50": "#ecf3fb",
          "500": "#488bd9",
          "600": "#396fad",
          "700": "#2b5382",
          "800": "#1c3756",
          "900": "#0e1b2b",
          "950": "#070d15",
        },
        "primary": Object {
          "100": "#ccf2ed",
          "200": "#99e5db",
          "25": "#f2fbfa",
          "300": "#66d9c9",
          "400": "#32ccb7",
          "50": "#e5f8f6",
          "500": "#00c0a5",
          "600": "#009984",
          "700": "#007363",
          "800": "#004c42",
          "900": "#002621",
          "950": "#001310",
        },
        "secondary": Object {
          "100": "#cedee1",
          "200": "#9ebdc4",
          "25": "#f2f6f7",
          "300": "#6d9ca7",
          "400": "#3d7a8a",
          "50": "#e6eef0",
          "500": "#0d5a6d",
          "600": "#0a4857",
          "700": "#073641",
          "800": "#05242b",
          "900": "#021215",
          "950": "#01080a",
        },
        "shade": Object {
          "0": "#ffffff",
          "100": "#e3e3e3",
          "1000": "#000000",
          "200": "#c8c8c8",
          "25": "#f8f8f8",
          "300": "#adadad",
          "400": "#929292",
          "50": "#f1f1f1",
          "500": "#777777",
          "600": "#5f5f5f",
          "700": "#474747",
          "800": "#2f2f2f",
          "900": "#171717",
          "950": "#0b0b0b",
        },
        "success": Object {
          "100": "#dbf2cc",
          "200": "#b8e599",
          "25": "#f6fbf2",
          "300": "#94d966",
          "400": "#71cc32",
          "50": "#edf8e5",
          "500": "#4ec000",
          "600": "#3e9900",
          "700": "#2e7300",
          "800": "#1f4c00",
          "900": "#0f2600",
          "950": "#071300",
        },
        "tertiary": Object {
          "100": "#ffe2df",
          "200": "#ffc5c0",
          "25": "#fff7f7",
          "300": "#ffa9a1",
          "400": "#ff8c82",
          "50": "#fff0ef",
          "500": "#ff7063",
          "600": "#cc594f",
          "700": "#99433b",
          "800": "#662c27",
          "900": "#331613",
          "950": "#190b09",
        },
        "warn": Object {
          "100": "#fdedd3",
          "200": "#fbdba7",
          "25": "#fefaf4",
          "300": "#f9c97b",
          "400": "#f7b74e",
          "50": "#fef6e9",
          "500": "#f5a623",
          "600": "#c4841c",
          "700": "#936315",
          "800": "#62420e",
          "900": "#312107",
          "950": "#181003",
        },
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;

exports[`Heading should render styles for size xs 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #474747;
  font-size: 15px;
  font-weight: 500;
  line-height: calc(20 / 15);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:36.0625em) {
  .c0 {
    font-size: 18px;
    line-height: calc(24/18);
  }
}

<HeadingTag
  className="c0"
  size="xs"
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#ffd1da",
          "200": "#ffa4b6",
          "25": "#fff3f5",
          "300": "#ff7692",
          "400": "#ff496e",
          "50": "#ffe8ec",
          "500": "#ff1c4a",
          "600": "#cc163b",
          "700": "#99102c",
          "800": "#660b1d",
          "900": "#33050e",
          "950": "#190207",
        },
        "info": Object {
          "100": "#dae7f7",
          "200": "#b5d0ef",
          "25": "#f5f9fd",
          "300": "#91b9e8",
          "400": "#6ca2e0",
          "50": "#ecf3fb",
          "500": "#488bd9",
          "600": "#396fad",
          "700": "#2b5382",
          "800": "#1c3756",
          "900": "#0e1b2b",
          "950": "#070d15",
        },
        "primary": Object {
          "100": "#ccf2ed",
          "200": "#99e5db",
          "25": "#f2fbfa",
          "300": "#66d9c9",
          "400": "#32ccb7",
          "50": "#e5f8f6",
          "500": "#00c0a5",
          "600": "#009984",
          "700": "#007363",
          "800": "#004c42",
          "900": "#002621",
          "950": "#001310",
        },
        "secondary": Object {
          "100": "#cedee1",
          "200": "#9ebdc4",
          "25": "#f2f6f7",
          "300": "#6d9ca7",
          "400": "#3d7a8a",
          "50": "#e6eef0",
          "500": "#0d5a6d",
          "600": "#0a4857",
          "700": "#073641",
          "800": "#05242b",
          "900": "#021215",
          "950": "#01080a",
        },
        "shade": Object {
          "0": "#ffffff",
          "100": "#e3e3e3",
          "1000": "#000000",
          "200": "#c8c8c8",
          "25": "#f8f8f8",
          "300": "#adadad",
          "400": "#929292",
          "50": "#f1f1f1",
          "500": "#777777",
          "600": "#5f5f5f",
          "700": "#474747",
          "800": "#2f2f2f",
          "900": "#171717",
          "950": "#0b0b0b",
        },
        "success": Object {
          "100": "#dbf2cc",
          "200": "#b8e599",
          "25": "#f6fbf2",
          "300": "#94d966",
          "400": "#71cc32",
          "50": "#edf8e5",
          "500": "#4ec000",
          "600": "#3e9900",
          "700": "#2e7300",
          "800": "#1f4c00",
          "900": "#0f2600",
          "950": "#071300",
        },
        "tertiary": Object {
          "100": "#ffe2df",
          "200": "#ffc5c0",
          "25": "#fff7f7",
          "300": "#ffa9a1",
          "400": "#ff8c82",
          "50": "#fff0ef",
          "500": "#ff7063",
          "600": "#cc594f",
          "700": "#99433b",
          "800": "#662c27",
          "900": "#331613",
          "950": "#190b09",
        },
        "warn": Object {
          "100": "#fdedd3",
          "200": "#fbdba7",
          "25": "#fefaf4",
          "300": "#f9c97b",
          "400": "#f7b74e",
          "50": "#fef6e9",
          "500": "#f5a623",
          "600": "#c4841c",
          "700": "#936315",
          "800": "#62420e",
          "900": "#312107",
          "950": "#181003",
        },
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;
